fix gaps in appnavbar

--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,36 @@
 
 }
 
+/*navbar collapse gaps*/
+/* Remove padding and margins from Nav.Link */
+.navbar-nav .nav-link {
+  padding-left: 0;
+  padding-right: 0;
+  margin-left: 0;
+  margin-right: 0;
+}
+
+/* Remove default padding and margins from the navbar */
+#app-navbar .navbar-collapse {
+  margin: 0;
+  padding: 0;
+}
+
+#app-navbar .navbar-nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#app-navbar .navbar-nav .nav-link {
+  padding-left: 3px;  
+  padding-right: 3px;
+}
+
+#app-navbar .navbar-nav {
+  gap: 3px;
+}
+
 /*navbar*/
 #app-navbar .navbar-toggler-icon {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='%23FFC107' stroke-linecap='round' stroke-miterlimit='10' stroke-width='3' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
@@ -135,3 +165,6 @@
   border-top: 1px solid gray;
   margin-bottom: 20px;
 }
+
+
+
